<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CoreActivity">

    <!--
        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar_share"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/ic_backspace_dark"
            app:contentInsetEnd="0dp"
            android:minHeight="?android:attr/actionBarSize"
            android:gravity="bottom"
            />
            -->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/firstName"
            android:ems="10"
            android:id="@+id/firstName"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lastName"
            android:ems="10"
            android:id="@+id/lastName"
            android:layout_below="@+id/firstName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:text="@string/birthDate"
            android:ems="10"
            android:id="@+id/birthDate"
            android:layout_below="@+id/lastName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="pickBirthDate"
            android:layout_alignRight="@+id/radioSexGroup"
            android:layout_alignEnd="@+id/radioSexGroup" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profilePic"
            android:layout_toRightOf="@+id/firstName"
            android:layout_alignBottom="@+id/birthDate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:onClick="pickImage" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nationalitySpinner"
            android:layout_weight="1"
            android:layout_below="@+id/profilePic"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:entries="@array/nationalitySpinner"
            android:spinnerMode="dialog" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionsButton"
            android:id="@+id/optionsButton"
            android:onClick="showBottomSheet"
            android:layout_alignBottom="@+id/radioSexGroup"
            android:layout_alignRight="@+id/profilePic"
            android:layout_alignEnd="@+id/profilePic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/nationalitySpinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioSexGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/maleRadio"
                android:text="@string/maleRadio"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/femaleRadio"
                android:text="@string/femaleRadio"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/otherRadio"
                android:text="@string/otherName"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RadioGroup>


    </RelativeLayout>
